--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
  "name": "hng-stage-two",
  "version": "1.0.0",
  "description": "",
- "main": "./src/server.ts",
+ "main": "dist/server.js",
  "scripts": {
-  "build": "npx tsc",
-  "start": "node dist/index.js",
+  "build": "npm cache clean --force && npm install && rm -rf dist && NODE_OPTIONS=--max-old-space-size=4096 ./node_modules/typescript/bin/tsc ",
+  "start": "NODE_ENV=production node dist/server.js",
   "test": "echo \"Error: no test specified\" && exit 1",
   "dev": "ts-node-dev ./src/server.ts"
  },
