--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
  "main": "dist/server.js",
  "scripts": {
   "build": "npm cache clean --force && npm install && rm -rf dist && NODE_OPTIONS=--max-old-space-size=4096 ./node_modules/typescript/bin/tsc",
-  "start": "NODE_ENV=production node dist/server.js",
+  "start": "cross-env NODE_ENV=production node dist/server.js",
   "test": "echo \"Error: no test specified\" && exit 1",
   "dev": "ts-node-dev ./src/server.ts"
  },
@@ -24,6 +24,7 @@
  },
  "devDependencies": {
   "@types/express": "^4.17.17",
+  "cross-env": "^7.0.3",
   "ts-node-dev": "^2.0.0",
   "typescript": "^5.2.2"
  }
