--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
  "author": "",
  "license": "ISC",
  "dependencies": {
+  "@appsignal/express": "^1.0.34",
   "@appsignal/nodejs": "^3.0.30",
   "@types/mongoose": "^5.11.97",
   "dotenv": "^16.3.1",
